syntax = "proto3";
package nat.pb;

import "natRegister.proto";
import "connectInvite.proto";

enum RequestType {
    KAReq       = 0;
    inviteReq   = 1;
}

enum ResponseType {
    KARes       = 0;
    inviteRes   = 1;
    invitedRes  = 2;
}

message request{
    RequestType reqType     = 1;
    RegRequest  keepAlive    = 2;
    InviteRequest invite    = 3;
}

message response{
    ResponseType resType    = 1;
    RegResponse   keepAlive  = 2;
    inviteResponse invite   = 3;
}